fixed unsaved work

--- a/app/globals.css
+++ b/app/globals.css
@@ -43,4 +43,14 @@ header {
   padding: 4px;
   width: 15%;
   margin-left: 25em;
+  margin-top: 5px;
+}
+
+.popup_text {
+  border: 1px solid #000000;
+  border-radius: 2px;
+}
+
+.popup_header {
+  font-size: medium;
 }
