Tweaked the css for input buttons to show when clicked.

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,7 +59,7 @@ header {
 }
 
 .input_button {
-  @apply input_field hover:bg-gray-400 cursor-pointer
+  @apply input_field hover:bg-gray-400 cursor-pointer active:bg-gray-600
 }
 
 .bow_text {
