--- a/app/globals.css
+++ b/app/globals.css
@@ -53,7 +53,7 @@
 }
 
 .popup-content.narrow-popup-content {
-  @apply dark_thing w-1/2 h-4/5 overflow-y-auto;
+  @apply dark_thing w-1/2 max-h-[80%] overflow-y-auto;
 }
 
 .highlight_text {
